--- a/less/footer.less
+++ b/less/footer.less
@@ -4,6 +4,7 @@
     flex-direction: row;
     background-color: @header-footer;
     @media @mobile{flex-direction: column;}
+    @media @tablet {padding: @section-padding + 5rem;}
 
     p {
         color: @font-styles;
