--- a/less/main-content.less
+++ b/less/main-content.less
@@ -201,12 +201,13 @@
 			}
 
 			.card img {
-				width: 30%;
+				width: 100%;
 				@media @tablet {width: 100%;}
-				@media @mobile {width: 70%;}
+				@media @mobile {width: 100%;}
 			}
 
 			.card-img {
+				flex: 0 0 200px;
 				@media @tablet {flex: 0 0 200px;}
 			}
 		}
